css/site.css
/* Site header */

#vassal-header {
  overflow: auto;
  border-bottom: 1px solid black;
  margin-bottom: 10px;
  background: #ffffff;
}

#vassal-logo {
  float: left;
  margin: 0;
  padding: 10px 20px 10px 10px;
  background: transparent url('/images/header_bg-w.png') top left no-repeat;
}

#vassal-logo a img {
  border: none;
}

/* Site navigation bar */

#vassal-nav-list {
  margin: 0;
  padding: 0;
  height: 29px;
  background: transparent url('/images/stripe.png') left repeat-x;
  border-bottom: 1px solid black;
}

#vassal-nav-list li {
  display: inline;
  list-style: none;
  margin: 0;
  padding: 0;
  float: left;
}

#vassal-nav-list a {
  display: block;
  color: white;
  padding: 10px 10px 5px 9px;
  font-family: sans-serif;
  font-weight: bold;
  font-size: 8pt;
  text-decoration: none;
  line-height: 1;
}

#vassal-nav-list a:hover {
  color: #f8d530;
  background: transparent url('/images/stripe2.png') left repeat-x;
}

/* Site login/logout block */

#vassal-login {
  float: right;
  margin: 5px 5px 0 0;
  font-size: 9pt;
}

#vassal-login a:link, #vassal-login a:visited {
  color: #546035;
  text-decoration: none;
}

#vassal-login a:hover {
  color: #9caa79;
  text-decoration: underline;
}

/* Site footer */

#vassal-footer {
  clear: both;
  margin: 4em 0;
  padding: 10px 0 0 0;
  border-top: 1px solid black;
  color: #222222;
  font-size: 9pt;
  font-family: sans-serif;
  background: #ffffff;
}

#vassal-footer acronym {
  font-variant: small-caps;
}

#vassal-footer .copyright {
  font-size: smaller;
}

#vassal-footer a:link {
  color: #546035;
}

#vassal-footer a:visited {
  color: #384024;
}

#vassal-footer a:hover {
  color: #9caa79;
}

#vassal-footer-list {
  text-align: center;
  margin: 0;
  padding: 0 5px;
}

#vassal-footer-list li {
  display: inline;
  list-style: none;
  margin: 0;
  padding: 8px 8px;
}

#vassal-footer-list a img {
  vertical-align: middle;
  border: 0;
}

